--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
     <div class="container">
         <div class="nav">       
-            <ul>
-                <li><a href="">免费注册</a></li>
-                <li><a href="">我的订单</a></li>
-                <li><a href="">我的京东</a></li>
-                <li><a href="">京东会员</a></li>
-                <li><a href="">企业采购</a></li>
-                <li><a href="">客服服务</a></li>
-                <li><a href="">网站导航</a></li>
-                <li><a href="">手机京东</a></li>
-            </ul>
+            <div class="nav-box">
+                <ul>
+                    <li><a href="">免费注册</a></li>
+                    <li><a href="">我的订单</a></li>
+                    <li><a href="">我的京东</a></li>
+                    <li><a href="">京东会员</a></li>
+                    <li><a href="">企业采购</a></li>
+                    <li><a href="">客服服务</a></li>
+                    <li><a href="">网站导航</a></li>
+                    <li><a href="">手机京东</a></li>
+                </ul>
+            </div>
         </div>
         <div class="header">
             <div class="logo-box"><a href=""><img src="" alt=""></a></div>
