--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>京东</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/iconfont.css">
 </head>
 <body>
     <div class="container">
@@ -23,22 +25,46 @@
                 </ul>
             </div>
         </div>
-        <div class="header">
-            <div class="logo-box"><a href=""><img src="" alt=""></a></div>
-            <div class="search-box">
-                <div class="search-bar">
-                    <input type="text">
-                    <button type="button"></button>
-                    <button type="button"></button>
+        <div class="header-box">
+            <div class="header">
+                <div class="logo-box">
+                    <a href="#">
+                        <img src="http://misc.360buyimg.com/mtd/pc/index_2019/1.0.0/assets/sprite/header/sprite.png" alt="logo">
+                    </a>
                 </div>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    
-                </ul>
+                <div class="search-box">
+                    <div class="search-bar">
+                        <input type="text" placeholder="请输入查询商品">
+                        <button type="button" class="search-btn"><i class="iconfont icon-icon- icon-search"></i></button>
+                        <button class="cart-btn"><i class="iconfont icon-gouwuche gouwuche-cart"></i>我的购物车</button>
+                    </div>
+                    <ul class="recommend">
+                        <li><a href="">图书超品日</a></li>
+                        <li><a href="">优惠券</a></li>
+                        <li><a href="">我的京东</a></li>
+                        <li><a href="">京东会员</a></li>
+                        <li><a href="">企业采购</a></li>
+                        <li><a href="">客服服务</a></li>
+                        <li><a href="">网站导航</a></li>
+                        <li><a href="">手机京东</a></li>
+                    </ul>
+                    <ul class="search-nav">
+                        <li><a href="">秒杀</a></li>
+                        <li><a href="">图书超品日</a></li>
+                        <li><a href="">优惠券</a></li>
+                        <li><a href="">我的京东</a></li>
+                        <li><a href="">京东会员</a></li>
+                        <li><a href="">企业采购</a></li>
+                        <li><a href="">客服服务</a></li>
+                        <li><a href="">网站导航</a></li>
+                        <li><a href="">手机京东</a></li>
+                    </ul>
+                </div>
+                <div class="ad-box">
+                    <a href="#">
+                        <img src="https://img14.360buyimg.com/babel/jfs/t1/150252/16/6477/31622/5f44b7a8E38803244/35e3fcecd055f4d4.png.webp" alt="ad">
+                    </a>
+                </div>
             </div>
         </div>
         <div class="content">
